# license-plate-recognition

./: .gitignore  Dockerfile  docker-compose.yml  main.py  predictions.py  pyproject.toml
